<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/light_gray"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:paddingBottom="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="16sp"
                android:text="@string/from_label"/>

            <TextView
                android:id="@+id/email_from_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/example_text_short"/>

        </LinearLayout>

        <LinearLayout
            android:paddingBottom="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="16sp"
                android:text="@string/to_label"/>

            <TextView
                android:id="@+id/email_to_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/example_text_short"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cc_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="16sp"
                android:text="@string/cc_label"/>

            <TextView
                android:id="@+id/email_cc_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/example_text_short"/>

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/email_full" />

</LinearLayout>